# python-project-lvl2

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: gengiff-linter.yml  gengiff-package.yml  gengiff-tests.yml
gendiff/: __init__.py  cli.py  differ.py  formatter.py  parser.py  tree.py
gendiff/diff/: render_stylish.py  tree.py
gendiff/formatters/: json.py  plain.py  render_stylish.py  stylish.py
gendiff/parsers/: __init__.py  cmd_args.py  json_parse.py  yml_parse.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_diff.py  test_render.py
tests/diff/: conftest.py  test_render_stylish.py
tests/diff/fixtures/: stylish
tests/fixtures/: file1_nested.yml  file2_nested.yml  json_nested  stylish  stylish_nested
